bugfix(Navigation):add position to parent to make overflow work

--- a/src/components/Organisms/Navigation.module.scss
+++ b/src/components/Organisms/Navigation.module.scss
@@ -3,6 +3,8 @@
 nav {
    width: 100%;
    font-size: 2rem;
+   position: relative;
+   overflow-x: hidden;
    @media screen and (max-width:1049px) {
       display: flex;
       justify-content: flex-end;
